--- a/gentoo/splash.conf
+++ b/gentoo/splash.conf
@@ -1,23 +1,23 @@
-# Config file for splashutils
+# Config file for splashutils.
 
-# a theme to use, probably best left commented (the theme specified
-# on the kernel command line is used)
+# A theme to use, probably best left commented (the theme specified
+# on the kernel command line is used).
 # SPLASH_THEME="gentoo"
 
-# on which ttys should fbsplash be enabled? defaults to RC_TTY_NUMBER
+# On which TTYs should fbsplash be enabled? Defaults to RC_TTY_NUMBER.
 # SPLASH_TTYS="1 2 3 4 5 6"
 
-# what font to use? defaults to what fbtruetype uses
+# What font to use? Defaults to what fbtruetype uses.
 # SPLASH_FONT="luxisri.ttf"
 
-# boot/reboot/shutdown message overrides
+# Boot/reboot/shutdown message overrides.
 # SPLASH_BOOT_MESSAGE="Booting the system"
 # SPLASH_REBOOT_MESSAGE="Rebooting the system"
 # SPLASH_SHUTDOWN_MESSAGE="Shutting the system down"
 
-# should we drop to verbose mode on initscript errors? (yes/no)
+# Should we drop to verbose mode on initscript errors? (yes/no)
 SPLASH_VERBOSE_ON_ERRORS="yes"
 
-# allows to set different themes on different consoles
+# Allows to set different themes on different consoles
 # format: "<console>:<theme> <console>:<theme> (...)"
 # SPLASH_TTY_MAP="1:emergence"
