--- a/misc/kbd/Makefile
+++ b/misc/kbd/Makefile
@@ -3,6 +3,9 @@ all: fgconsole
 fgconsole: fgconsole.o getfd.o
 	$(CC) $(CFLAGS) $(LDFLAGS) $+ -o $@
 
+clean:
+	rm -f *.o fgconsole
+
 install:
 	install -D fgconsole $(DESTDIR)/lib/splash/bin/fgconsole
 
