--- a/gentoo/Makefile
+++ b/gentoo/Makefile
@@ -1,10 +1,11 @@
 # Makefile for the splash baselayout plugin.
 #
 
-CFLAGS += -fPIC -g -Wall
+CFLAGS 	+= -fPIC -g -Wall -I../core
+LDFLAGS += -L../core/objs
 
-splash.so: splash.o ../core/libsplash.o
-	$(CC) -fPIC -shared -Wl,-soname,$@ -o $@ -leinfo $+
+splash.so: splash.o
+	$(CC) $(LDFLAGS) -fPIC -shared -Wl,-soname,$@ -o $@ -leinfo -lsplash $+
 
 test: test.o
 	$(CC) $+ -o $@ -leinfo -lrc -ldl
