Add proper support for svc-activated anims.
Up to this point, an anim activated by a svc_event would appear on the
screen after a potentially long delay. This fixes it so that it is painted
immediately.

--- a/core/Makefile
+++ b/core/Makefile
@@ -89,7 +89,7 @@ endif
 
 ifeq ($(call config_opt,CONFIG_MNG),true)
 	OBJS   += $(OBJDIR)/mng_render.o $(OBJDIR)/mng_callbacks.o
-	LDLIBS += -lmng -llcms -ljpeg -lz
+	LDLIBS += -lmng -llcms -ljpeg -lz -lrt
 endif
 
 ifeq ($(call config_opt,CONFIG_TTF_KERNEL),true)
