[gentoo] Add support for baselayout-2.0.0_alpha1

--- a/gentoo/Makefile
+++ b/gentoo/Makefile
@@ -1,14 +1,20 @@
 # Makefile for the splash baselayout plugin.
 #
 
-CFLAGS 	+= -fPIC -g -Wall -I../core
+LIB		?= lib
+CFLAGS 	+= -g -Wall
 LDFLAGS += -L../core/objs
+
+INCLUDES = -I../core
 
 splash.so: splash.o
 	$(CC) $(LDFLAGS) -fPIC -shared -Wl,-soname,$@ -o $@ -leinfo -lsplash $+
 
 test: test.o
 	$(CC) $+ -o $@ -leinfo -lrc -ldl
+
+%.o: %.c
+	$(CC) $(CFLAGS) $(INCLUDES) -DLIBDIR=\"$(LIB)\" -fPIC -c -o $@ $<
 
 install:
 	install -D splash.so $(DESTDIR)/lib/rcscripts/plugins/splash.so
